Updated documentation and fixed bugs