@@ -63,6 +63,16 @@
 			<scope>runtime</scope>
 		</dependency>
 		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-api</artifactId>
+			<version>1.6.2</version>
+		</dependency>
+		<dependency>
+			<groupId>log4j</groupId>
+			<artifactId>log4j</artifactId>
+			<version>1.2.16</version>
+		</dependency>
+		<dependency>
 			<groupId>com.google.gwt</groupId>
 			<artifactId>gwt-user</artifactId>
 			<version>${gwtVersion}</version>
@@ -152,12 +162,7 @@
 		<finalName>magecomet</finalName>
 		<!-- Generate compiled stuff in the folder used for developing mode -->
 		<outputDirectory>${webappDirectory}/WEB-INF/classes</outputDirectory>
-
-
-
-
 		<plugins>
-
 			<!-- GWT Maven Plugin -->
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
@@ -178,7 +183,6 @@
 					gwt-maven-plugin documentation at codehaus.org
 				-->
 				<configuration>
-					<extraJvmArgs>-XX:MaxPermSize=4000M -Xmx6000M</extraJvmArgs>
 					<runTarget>magecomet.html</runTarget>
 					<hostedWebapp>${webappDirectory}</hostedWebapp>
 					<i18nMessagesBundle>uk.ac.ebi.fgpt.magecomet.client.Messages</i18nMessagesBundle>
